<resources>
	<string name="app_name">Go ECE!</string>
	<string name="cancel">Cancel</string>
	<string name="ok">OK</string>
	<string name="calculate">Calculate</string>
	<string name="copy">Copy</string>
	<string name="paste">Paste</string>
	<string name="magpha">r * e<sup>θ<i>i</i></sup></string>
	<string name="reim">a + b<i>i</i></string>
	<string name="copyRaw">%1$.4g</string>
	<string name="copySig">%1$.4f</string>
	<string name="copyUnits">%1$s</string>
	<string name="copyAll">%1$s</string>
	<string name="copyAngle">%1$.2f°</string>
	<string name="copyMagPha">%1$.4g @ %2$.2f°</string>
	<string name="copyReIm">%1$.4g + %2$.4gi</string>
	<string name="copyReImMinus">%1$.4g - %2$.4gi</string>
	<string name="editRaw">%1$.6f</string>
	<string name="value">Value</string>
	<string name="voltage">Voltage</string>
	<string name="current">Current</string>
	<string name="resist">Resistance</string>
	<string name="react">Reactance</string>
	<string name="imped">Impedance</string>
	<string name="power">Power</string>
	<string name="induct">Inductance</string>
	<string name="capacit">Capacitance</string>
	<string name="freq">Frequency</string>
	<string name="duty">Duty Cycle</string>
	<string name="period">Period</string>
	<string name="duration">Duration</string>
	<string name="mag">Magnitude</string>
	<string name="phase">Phase</string>
	<string name="angle">Angle</string>
	<string name="amplit">Amplitude</string>
	<string name="pktopk">Peak-to-Peak</string>
	<string name="real">Real</string>
	<string name="imag">Imaginary</string>
	<string name="rms">RMS</string>
	<string name="dc">DC</string>
	<string name="ac">AC</string>
	<string name="phase3">3-Phase</string>
	<string name="resSeries">Values available: </string>
	<string name="degree">°</string>
	<string name="degreeC">°C</string>
	<string name="degreeF">°F</string>
	<string name="bits">bits</string>
	<string-array name="guiPcbUnits">
		
		<item>mil</item>
		<item>0.0254</item>
		<item>in</item>
		<item>25.4</item>
		<item>um</item>
		<item>0.001</item>
		<item>oz Cu</item>
		<item>0.035</item>
	</string-array>
	<string-array name="guiTimeUnits">
		
		<item>ms</item>
		<item>0.001</item>
		<item>min</item>
		<item>60</item>
		<item>hr</item>
		<item>3600</item>
		<item>day</item>
		<item>86400</item>
		<item>wk</item>
		<item>604800</item>
		<item>yr</item>
		<item>31557600</item>
	</string-array>
	<string name="guiTabAnalog">Analog</string>
	<string name="guiTabDigital">Digital</string>
	<string name="guiTabCircuits">IC</string>
	<string name="guiCatPassive">Passives</string>
	<string name="guiColorCode">Resistor Color Code</string>
	<string name="guiSMDResistor">SMD Resistor Code</string>
	<string name="guiImpedance">Impedance</string>
	<string name="guiCatECELaws">ECE Fundamentals</string>
	<string name="guiOhmsLaw">Ohm\'s Law and Power</string>
	<string name="guiSerPar">Series/Parallel Resistance</string>
	<string name="guiVDiv">Voltage Divider</string>
	<string name="guiCatDesignTools">Design Tools</string>
	<string name="guiCurCap">Current Capacity</string>
	<string name="guiPcbWidth">PCB Trace Impedance</string>
	<string name="guiPowerUse">Power Use/Battery Life</string>
	<string name="guiDeltaWye">Delta-Wye Conversion</string>
	<string name="guiOscDesign">Oscillator Designer</string>
	<string name="guiCatAnalogIC">Analog ICs</string>
	<string name="guiKMapper">K-Map Generator</string>
	<string name="guiAdcCalc">ADC Calculation</string>
	<string name="gui555Calc">555 Calculator</string>
	<string name="guiPinout">Pinout Reference</string>
	<string name="guiByteConv">Byte Conversion</string>
	<string name="guiResLine">Value is underlined</string>
	<string name="guiResInvalid">Invalid resistor code.</string>
	<string name="guiResInitialValue">103</string>
	<string name="cirohms">Circuit diagram</string>
	<string name="guiOhmsVRMS">Voltage (RMS)</string>
	<string name="guiOhmsIRMS">Current (RMS)</string>
	<string name="guiOhmsPReal">Real Power</string>
	<string name="guiOhmsPImag">Reactive Power</string>
	<string name="guiOhmsPApp">Apparent Power</string>
	<string name="guiOhmsPFactor">Power Factor</string>
	<string name="guiSerSeries1">R&lt;small&gt;1&lt;/small&gt;</string>
	<string name="guiSerSeries2">R&lt;small&gt;2&lt;/small&gt;</string>
	<string name="guiSerParallel1">R&lt;small&gt;3&lt;/small&gt;</string>
	<string name="guiSerParallel2">R&lt;small&gt;4&lt;/small&gt;</string>
	<string name="guiSerRSer">Series Resistance</string>
	<string name="guiSerRPar">Parallel Resistance</string>
	<string name="cirserpar">Series and parallel circuit diagram</string>
	<string-array name="guiSerResSeries">
		<item>1%</item>
		<item>5%</item>
		<item>10%</item>
		<item>20%</item>
	</string-array>
	<string name="guiDivInput">V&lt;small&gt;in&lt;/small&gt;</string>
	<string name="guiDivOutput">V&lt;small&gt;out&lt;/small&gt;</string>
	<string name="guiDivTop">R&lt;small&gt;1&lt;/small&gt;</string>
	<string name="guiDivBottom">R&lt;small&gt;2&lt;/small&gt;</string>
	<string name="guiDivLoad">R&lt;small&gt;L&lt;/small&gt;</string>
	<string name="guiDivEquiv">Equivalent resistance</string>
	<string name="guiDivCurrent">Current flow</string>
	<string name="guiDivPower">Power dissipation</string>
	<string name="cirvdiv">Voltage divider circuit diagram</string>
	<string name="guiCurLength">Length</string>
	<string name="guiCurWire">Wire</string>
	<string name="guiCurTrace">PCB Trace (Surface)</string>
	<string name="guiCurTemp">\u2206T</string>
	<string name="guiCurDiameter">Diameter</string>
	<string name="guiCurXArea">Cross-Section Area</string>
	<string name="guiCurGauge">Gauge</string>
	<string name="guiCurCurrentRating">Current Rating</string>
	<string name="guiCurTraceWidth">Width</string>
	<string name="guiCurTraceThick">Thickness</string>
	<string name="guiCurPower">Power loss</string>
	<string name="guiCurVDrop">Voltage drop</string>
	<string-array name="guiCurMaterials">
		<item>Aluminium</item>
		<item>Copper</item>
		<item>Steel</item>
		<item>Gold</item>
		<item>Silver</item>
	</string-array>
	<string-array name="guiCurDiaUnits">
		
		<item>mil</item>
		<item>0.0254</item>
		<item>in</item>
		<item>25.4</item>
	</string-array>
	<string name="guiCurAreaBase">mm&lt;sup&gt;&lt;small&gt;2&lt;/small&gt;&lt;/sup&gt;</string>
	<string-array name="guiCurAreaUnits">
		
		<item>kcmil</item>
		<item>0.5067</item>
		<item>cm&lt;sup&gt;&lt;small&gt;2&lt;/small&gt;&lt;/sup&gt;</item>
		<item>100</item>
		<item>in&lt;sup&gt;&lt;small&gt;2&lt;/small&gt;&lt;/sup&gt;</item>
		<item>645.16</item>
	</string-array>
	<string-array name="guiCurTempUnits">
		
		<item>°F</item>
		<item>0.5555555555555555</item>
	</string-array>
	<string name="guiCurTraceWarn">Calculated trace width may be unrealistic for these parameters</string>
	<string name="guiCurCapWarn">Current value may be unrealistic for these parameters</string>
	<string name="guiPcbImage">Trace diagram</string>
	<string-array name="guiPcbScenarios">
		<item>Microstrip</item>
		<item>Stripline</item>
		<item>Differential Microstrip</item>
		<item>Differential Stripline</item>
	</string-array>
	<string name="guiPcbTraceWidth">Width (W)</string>
	<string name="guiPcbTraceThick">Height (T)</string>
	<string name="guiPcbTraceSpace">Spacing (S)</string>
	<string name="guiPcbTraceZSingle">Z Single</string>
	<string name="guiPcbTraceZDiff">Z Diff</string>
	<string name="guiPcbThickness">PCB Height (H)</string>
	<string name="guiPcbDielectric">PCB \u03B5&lt;small&gt;r&lt;/small&gt;</string>
	<string name="guiPcbNoSolution">No solution found for these requirements.</string>
	<string name="guiPcbBadInput">Relative permittivity must be greater than 1, and all other measurements must be positive.</string>
	<string name="guiPwrCapacity">Battery Capacity</string>
	<string name="guiPwrRun">Run</string>
	<string name="guiPwrIdle">Idle</string>
	<string name="guiPwrSleep">Sleep</string>
	<string name="guiPwrDuration">Runtime</string>
	<string name="guiPwrIAvg">Average Current</string>
	<string name="guiDelDelta">Delta</string>
	<string name="guiDelWye">Wye</string>
	<string name="guiDelDelta1">R&lt;small&gt;1&lt;/small&gt;</string>
	<string name="guiDelDelta2">R&lt;small&gt;2&lt;/small&gt;</string>
	<string name="guiDelDelta3">R&lt;small&gt;3&lt;/small&gt;</string>
	<string name="guiDelWye1">R&lt;small&gt;4&lt;/small&gt;</string>
	<string name="guiDelWye2">R&lt;small&gt;5&lt;/small&gt;</string>
	<string name="guiDelWye3">R&lt;small&gt;6&lt;/small&gt;</string>
	<string name="guiOscLoadCap">Rated C&lt;small&gt;L&lt;/small&gt;</string>
	<string name="guiOscShuntCap">Rated C&lt;small&gt;0&lt;/small&gt;</string>
	<string name="guiOscESR">ESR</string>
	<string name="guiOscStrayCap">Stray Capacitance</string>
	<string name="guiOscTranscon">Transconductance</string>
	<string name="guiOscCL">Load Capacitance</string>
	<string name="guiOscBadCap">Invalid oscillator or stray capacitance.</string>
	<string name="cirosc">Crystal oscillator circuit diagram</string>
	<string name="gui555Mono">Monostable</string>
	<string name="gui555Ast">Astable</string>
	<string name="gui555Delay">Interval</string>
	<string name="gui555C1">C&lt;small&gt;1&lt;/small&gt;</string>
	<string name="gui555R1">R&lt;small&gt;1&lt;/small&gt;</string>
	<string name="gui555R2">R&lt;small&gt;2&lt;/small&gt;</string>
	<string name="gui555BadDuty" formatted="false">Duty cycle must be between 0% and 100%.</string>
	<string name="gui555BadRAst">R1 and R2 should be between 1 KΩ and 10 MΩ.</string>
	<string name="gui555BadRMono">R1 should be between 1 KΩ and 1 MΩ.</string>
	<string name="cir555">555 oscillator circuit diagram</string>
	<string name="guiAdcVrefP">V&lt;small&gt;ref&lt;/small&gt;&lt;sup&gt;&lt;small&gt;+&lt;/small&gt;&lt;/sup&gt;</string>
	<string name="guiAdcVrefN">V&lt;small&gt;ref&lt;/small&gt;&lt;sup&gt;&lt;small&gt;-&lt;/small&gt;&lt;/sup&gt;</string>
	<string name="guiAdcRes">Resolution</string>
	<string name="guiAdcCount">Counts</string>
	<string name="guiAdcStep">LSB Size</string>
	<string name="guiAdcBadBits">Bit depth must be at least 2 and at most 32.</string>
	<string name="guiAdcBadCount">Counts must be at least 0 and no more than %1$.0f.</string>
	<string name="guiAdcBadSpan">Positive reference voltage must be greater than negative reference.</string>
	<string name="guiAdcBadVolt">Target voltage must be between the positive and negative references.</string>
	<string name="guiPinoutHint">Part number or function</string>
	<string name="guiByteHex">Hexadecimal</string>
	<string name="guiByteBin">Binary</string>
	<string name="guiByteOctal">Octal</string>
	<string name="guiByteASCII">ASCII</string>
	<string name="guiByteFloat">Floating Point</string>
	<string name="guiByteDec">Decimal</string>
	<string name="guiByteSign">Signed</string>
	<string name="guiByteSize8">Byte</string>
	<string name="guiByteSize16">Word</string>
	<string name="guiByteSize32">Dword</string>
	<string name="guiByteSize64">Qword</string>
	<string name="guiByteBigEnd">Big Endian</string>
	<string name="guiByteBadHex">Invalid hexadecimal number; valid characters are 0-9 and A-F.</string>
	<string name="guiByteBadBin">Invalid binary number; valid digits are 0 or 1.</string>
	<string name="guiByteBadOctal">Invalid octal number; valid digits are 0-7.</string>
	<string name="guiByteBadFloat">Invalid floating point number.</string>
	<string name="guiByteBadDec">Invalid decimal number; valid digits are 0-9.</string>
</resources>