<?xml version="1.0" encoding="utf-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2015 Stephen Carlson
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="match_parent" android:layout_height="match_parent">
	<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
				  android:orientation="vertical">
		<TextView android:layout_width="match_parent" android:layout_height="wrap_content"
				  android:text="@string/guiCatPassive" android:layout_gravity="left"
				  android:layout_marginLeft="5dp" android:maxLines="1"
				  android:textAppearance="?android:attr/textAppearanceLarge"/>
		<Button android:layout_width="match_parent" android:layout_height="wrap_content"
				android:text="@string/guiColorCode" android:id="@+id/guiColorCode"/>
		<Button android:layout_width="match_parent" android:layout_height="wrap_content"
				android:text="@string/guiSMDResistor" android:id="@+id/guiSMDResistor"/>
		<Button android:layout_width="match_parent" android:layout_height="wrap_content"
				android:text="@string/guiImpedance" android:id="@+id/guiImpedance"/>
		<TextView android:layout_width="match_parent" android:layout_height="wrap_content"
				  android:text="@string/guiCatECELaws" android:layout_gravity="left"
				  android:layout_marginLeft="5dp" android:layout_marginTop="10dp"
				  android:textAppearance="?android:attr/textAppearanceLarge"/>
		<Button android:layout_width="match_parent" android:layout_height="wrap_content"
				android:text="@string/guiOhmsLaw" android:id="@+id/guiOhmsLaw"/>
		<Button android:layout_width="match_parent" android:layout_height="wrap_content"
				android:text="@string/guiSerPar" android:id="@+id/guiSerPar"/>
		<Button android:layout_width="match_parent" android:layout_height="wrap_content"
				android:text="@string/guiVDiv" android:id="@+id/guiVDiv"/>
		<TextView android:layout_width="match_parent" android:layout_height="wrap_content"
				  android:text="@string/guiCatDesignTools" android:layout_gravity="left"
				  android:layout_marginLeft="5dp" android:layout_marginTop="10dp"
				  android:textAppearance="?android:attr/textAppearanceLarge"/>
		<Button android:layout_width="match_parent" android:layout_height="wrap_content"
				android:text="@string/guiCurCap" android:id="@+id/guiCurCap"/>
		<Button android:layout_width="match_parent" android:layout_height="wrap_content"
				android:text="@string/guiPcbWidth" android:id="@+id/guiPcbWidth"/>
		<Button android:layout_width="match_parent" android:layout_height="wrap_content"
				android:text="@string/guiPowerUse" android:id="@+id/guiPowerUse"/>
	</LinearLayout>
</ScrollView>