<?xml version="1.0" encoding="utf-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2016 Stephen Carlson
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:ece="http://schemas.android.com/apk/res/com.stcarlso.goece"
			  android:layout_width="match_parent" android:layout_height="match_parent"
			  android:baselineAligned="false" android:orientation="vertical"
			  android:id="@+id/guiDelRoot">
	<RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_weight="0.5" android:layout_marginLeft="10dp"
					android:layout_marginRight="10dp">
		<TextView android:text="@string/guiDelDelta" android:layout_width="wrap_content"
				  android:layout_height="wrap_content" android:layout_centerHorizontal="true"
				  android:textAppearance="@android:style/TextAppearance.Medium"
				  android:id="@+id/guiDelDeltaText"/>
		<view class="com.stcarlso.goece.ui.ComplexEntryBox" android:id="@+id/guiDelDelta1"
			  android:layout_width="wrap_content" android:layout_height="wrap_content"
			  android:tag="guiDelDelta1" ece:affects="wye" ece:value="100" ece:phase="0"
			  ece:description="@string/guiDelDelta1" android:layout_alignParentLeft="true"
			  ece:imagDesc="@string/react" ece:phaDesc="@string/phase" ece:units="Ω"
			  ece:realDesc="@string/resist" ece:magDesc="@string/imped" ece:group="delta"
			  android:layout_below="@id/guiDelDeltaText"/>
		<view class="com.stcarlso.goece.ui.ComplexEntryBox" android:id="@+id/guiDelDelta2"
			  android:layout_width="wrap_content" android:layout_height="wrap_content"
			  android:tag="guiDelDelta2" ece:affects="wye" ece:value="100" ece:phase="0"
			  ece:description="@string/guiDelDelta2" android:layout_alignParentRight="true"
			  ece:imagDesc="@string/react" ece:phaDesc="@string/phase" ece:units="Ω"
			  ece:realDesc="@string/resist" ece:magDesc="@string/imped" ece:group="delta"
			  android:layout_below="@id/guiDelDeltaText"/>
		<view class="com.stcarlso.goece.ui.ComplexEntryBox" android:id="@+id/guiDelDelta3"
			  android:layout_width="wrap_content" android:layout_height="wrap_content"
			  android:tag="guiDelDelta3" ece:affects="wye" ece:value="100" ece:phase="0"
			  ece:description="@string/guiDelDelta3" android:layout_alignParentBottom="true"
			  ece:imagDesc="@string/react" ece:phaDesc="@string/phase" ece:units="Ω"
			  ece:realDesc="@string/resist" ece:magDesc="@string/imped" ece:group="delta"
			  android:layout_centerHorizontal="true"/>
	</RelativeLayout>
	<RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_weight="0.5" android:layout_marginLeft="10dp"
					android:layout_marginRight="10dp">
		<TextView android:text="@string/guiDelWye" android:layout_width="wrap_content"
				  android:layout_height="wrap_content" android:layout_centerHorizontal="true"
				  android:textAppearance="@android:style/TextAppearance.Medium"
				  android:id="@+id/guiDelWyeText"/>
		<view class="com.stcarlso.goece.ui.ComplexEntryBox" android:id="@+id/guiDelWye1"
			  android:layout_width="wrap_content" android:layout_height="wrap_content"
			  android:tag="guiDelWye1" ece:affects="delta" ece:value="100" ece:phase="0"
			  ece:description="@string/guiDelWye1" android:layout_alignParentLeft="true"
			  ece:imagDesc="@string/react" ece:phaDesc="@string/phase" ece:units="Ω"
			  ece:realDesc="@string/resist" ece:magDesc="@string/imped" ece:group="wye"
			  android:layout_below="@id/guiDelWyeText"/>
		<view class="com.stcarlso.goece.ui.ComplexEntryBox" android:id="@+id/guiDelWye2"
			  android:layout_width="wrap_content" android:layout_height="wrap_content"
			  android:tag="guiDelWye2" ece:affects="delta" ece:value="100" ece:phase="0"
			  ece:description="@string/guiDelWye2" android:layout_alignParentRight="true"
			  ece:imagDesc="@string/react" ece:phaDesc="@string/phase" ece:units="Ω"
			  ece:realDesc="@string/resist" ece:magDesc="@string/imped" ece:group="wye"
			  android:layout_below="@id/guiDelWyeText"/>
		<view class="com.stcarlso.goece.ui.ComplexEntryBox" android:id="@+id/guiDelWye3"
			  android:layout_width="wrap_content" android:layout_height="wrap_content"
			  android:tag="guiDelWye3" ece:affects="delta" ece:value="100" ece:phase="0"
			  ece:description="@string/guiDelWye3" android:layout_alignParentBottom="true"
			  ece:imagDesc="@string/react" ece:phaDesc="@string/phase" ece:units="Ω"
			  ece:realDesc="@string/resist" ece:magDesc="@string/imped" ece:group="wye"
			  android:layout_centerHorizontal="true"/>
	</RelativeLayout>
</LinearLayout>