<?xml version="1.0" encoding="utf-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2015 Stephen Carlson
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
			  xmlns:ece="http://schemas.android.com/apk/res/com.stcarlso.goece"
			  android:layout_width="match_parent" android:layout_height="match_parent">
	<com.stcarlso.goece.ValueEntryBox android:layout_width="wrap_content"
									  android:layout_height="wrap_content" ece:units="Ω"
									  android:id="@+id/guiImpedRes" ece:value="10"
									  android:layout_gravity="center_horizontal"
									  ece:description="@string/resist"/>
	<com.stcarlso.goece.ValueEntryBox android:layout_width="wrap_content"
									  android:layout_height="wrap_content" ece:units="F"
									  android:id="@+id/guiImpedCap" ece:value="1E-6"
									  android:layout_gravity="center_horizontal"
									  ece:description="@string/capacit"/>
	<com.stcarlso.goece.ValueEntryBox android:layout_width="wrap_content"
									  android:layout_height="wrap_content" ece:units="H"
									  android:id="@+id/guiImpedInd" ece:value="1E-6"
									  android:layout_gravity="center_horizontal"
									  ece:description="@string/induct"/>
	<com.stcarlso.goece.ValueEntryBox android:layout_width="wrap_content"
									  android:layout_height="wrap_content" ece:units="Hz"
									  android:id="@+id/guiImpedFreq" ece:value="1000"
									  android:layout_gravity="center_horizontal"
									  ece:description="@string/freq"/>
	<com.stcarlso.goece.ValueEntryBox android:layout_width="wrap_content"
									  android:layout_marginTop="40dp"
									  android:layout_height="wrap_content" ece:units="Ω"
									  android:id="@+id/guiImpedReact" ece:value="0.001"
									  android:layout_gravity="center_horizontal"
									  ece:description="@string/react"/>
	<com.stcarlso.goece.ValueEntryBox android:layout_width="wrap_content"
									  android:layout_height="wrap_content" ece:units="Ω"
									  android:id="@+id/guiImpedImp" ece:value="0.001"
									  android:layout_gravity="center_horizontal"
									  ece:description="@string/imped"/>
	<com.stcarlso.goece.ValueEntryBox android:layout_width="wrap_content"
									  android:layout_height="wrap_content" ece:units="°"
									  android:id="@+id/guiImpedPha" ece:value="0"
									  android:layout_gravity="center_horizontal"
									  ece:description="@string/phase"/>
</LinearLayout>