<?xml version="1.0" encoding="utf-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2017 Stephen Carlson
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:ece="http://schemas.android.com/apk/res/com.stcarlso.goece"
				android:layout_width="match_parent" android:layout_height="match_parent"
				android:orientation="vertical">
	<View android:layout_width="0dp" android:layout_height="0dp" android:id="@+id/guiAdcCenter"
		  android:layout_centerHorizontal="true"/>
	<view class="com.stcarlso.goece.ui.CustomEntryBox" android:id="@+id/guiAdcRes"
		  android:layout_width="wrap_content" android:layout_height="wrap_content"
		  android:tag="guiAdcRes" ece:value="10" ece:units="@string/bits"
		  ece:group="none" ece:description="@string/guiAdcRes" ece:affects="outputs"
		  android:layout_centerHorizontal="true"/>
	<view class="com.stcarlso.goece.ui.ValueEntryBox" ece:affects="outputs" ece:units="V"
		  android:layout_width="wrap_content" android:layout_height="wrap_content"
		  android:tag="guiAdcVrefP" ece:value="1" android:layout_marginRight="5dp"
		  android:id="@+id/guiAdcVrefP" ece:group="none" ece:description="@string/guiAdcVrefP"
		  android:layout_toLeftOf="@id/guiAdcCenter" android:layout_marginTop="5dp"
		  android:layout_below="@id/guiAdcRes" ece:allowNegative="true"/>
	<view class="com.stcarlso.goece.ui.ValueEntryBox" ece:affects="outputs" ece:units="V"
		  android:layout_width="wrap_content" android:layout_height="wrap_content"
		  android:tag="guiAdcVrefN" ece:value="-1" android:layout_marginLeft="5dp"
		  android:id="@+id/guiAdcVrefN" ece:group="none" ece:description="@string/guiAdcVrefN"
		  android:layout_toRightOf="@id/guiAdcCenter" android:layout_marginTop="5dp"
		  android:layout_below="@id/guiAdcRes" ece:allowNegative="true"/>
	<view class="com.stcarlso.goece.ui.CustomEntryBox" android:id="@+id/guiAdcCount"
		  android:layout_width="wrap_content" android:layout_height="wrap_content"
		  android:tag="guiAdcCount" ece:value="512" ece:units=""
		  ece:group="inputs" ece:description="@string/guiAdcCount" ece:affects="outputs"
		  android:layout_below="@id/guiAdcVrefN" android:layout_marginTop="10dp"
		  android:layout_marginRight="5dp" android:layout_toLeftOf="@id/guiAdcCenter"/>
	<view class="com.stcarlso.goece.ui.ValueEntryBox" android:id="@+id/guiAdcVoltage"
		  android:layout_width="wrap_content" android:layout_height="wrap_content"
		  android:tag="guiAdcVoltage" ece:value="0" ece:units="V" ece:group="outputs"
		  ece:description="@string/voltage" android:layout_below="@id/guiAdcVrefN"
		  android:layout_marginLeft="5dp" android:layout_toRightOf="@id/guiAdcCenter"
		  ece:affects="inputs" android:layout_marginTop="10dp"/>
</RelativeLayout>